--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "version": "2.0.2",
   "author": "Richard Raduly <richard@raduly.fr>",
   "dependencies": {
+    "@fontsource/ubuntu": "^4.5.11",
     "@popperjs/core": "^2.11.6",
+    "@react-icons/all-files": "^4.1.0",
     "bootstrap": "^5.2.2",
     "gatsby": "^5.1.0",
     "gatsby-plugin-gatsby-cloud": "^5.1.0",
     "gatsby-plugin-image": "^3.1.0",
     "gatsby-plugin-manifest": "^5.1.0",
     "gatsby-plugin-offline": "^6.1.0",
-    "gatsby-plugin-sass": "^6.1.0",
+    "gatsby-plugin-sass": "^6.3.1",
     "gatsby-plugin-sharp": "^5.1.0",
     "gatsby-source-filesystem": "^5.1.0",
     "gatsby-transformer-sharp": "^5.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
-    "sass": "1.49.11"
+    "sass": "^1.49.11"
   },
   "devDependencies": {
     "prettier": "2.5.1"
